--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,14 @@
     background-position: center;
   }
 
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
   .bg-opacity-50 {
     opacity: 0.7; /* Slightly darker background for mobile readability */
   }
